clutter/cogl/cogl/cogl-point-in-poly.c
@@ -38,14 +38,40 @@
 #include "config.h"
 #endif
 
+#include "cogl-util.h"
+
 #include <glib.h>
 
+/* We've made a notable change to the original algorithm referenced
+ * above to make sure we have reliable results for screen aligned
+ * rectangles even though there may be some numerical in-precision in
+ * how the vertices of the polygon were calculated.
+ *
+ * We've avoided introducing an epsilon factor to the comparisons
+ * since we feel there's a risk of changing some semantics in ways that
+ * might not be desirable. One of those is that if you transform two
+ * polygons which share an edge and test a point close to that edge
+ * then this algorithm will currently give a positive result for only
+ * one polygon.
+ *
+ * Another concern is the way this algorithm resolves the corner case
+ * where the horizontal ray being cast to count edge crossings may
+ * cross directly through a vertex. The solution is based on the "idea
+ * of Simulation of Simplicity" and "pretends to shift the ray
+ * infinitesimally down so that it either clearly intersects, or
+ * clearly doesn't touch". I'm not familiar with the idea myself so I
+ * expect a misplaced epsilon is likely to break that aspect of the
+ * algorithm.
+ *
+ * The simple solution we've gone for is to pixel align the polygon
+ * vertices which should eradicate most noise due to in-precision.
+ */
 int
-_cogl_util_point_in_poly (float point_x,
-                          float point_y,
-                          void *vertices,
-                          size_t stride,
-                          int n_vertices)
+_cogl_util_point_in_screen_poly (float point_x,
+                                 float point_y,
+                                 void *vertices,
+                                 size_t stride,
+                                 int n_vertices)
 {
   int i, j, c = 0;
 
@@ -57,6 +83,11 @@ _cogl_util_point_in_poly (float point_x,
                                  sizeof (float));
       float vert_yj = *(float *)((guint8 *)vertices + j * stride +
                                  sizeof (float));
+
+      vert_xi = COGL_UTIL_NEARBYINT (vert_xi);
+      vert_xj = COGL_UTIL_NEARBYINT (vert_xj);
+      vert_yi = COGL_UTIL_NEARBYINT (vert_yi);
+      vert_yj = COGL_UTIL_NEARBYINT (vert_yj);
 
       if (((vert_yi > point_y) != (vert_yj > point_y)) &&
            (point_x < (vert_xj - vert_xi) * (point_y - vert_yi) /
